@@ -1,50 +1,60 @@
-/*
- * dataRepresentation.java
- *
- * Created on 15. juni 2000, 18:21
- */
-
 package neqsim.dataPresentation;
 
-import java.io.*;
-import java.text.*;
+import java.io.BufferedOutputStream;
+import java.io.DataOutputStream;
+import java.io.File;
+import java.io.FileOutputStream;
+import java.text.DecimalFormat;
 
 /**
+ * <p>
+ * dataHandeling class.
+ * </p>
  *
  * @author Even Solbraa
- * @version
+ * @version $Id: $Id
  */
 public class dataHandeling {
-
     private static final long serialVersionUID = 1000;
 
-    /** Creates new dataRepresentation */
-    public dataHandeling() {
-    }
+    /**
+     * <p>
+     * Constructor for dataHandeling.
+     * </p>
+     */
+    public dataHandeling() {}
 
+    /**
+     * <p>
+     * getXValue.
+     * </p>
+     *
+     * @param series a int
+     * @param item a int
+     * @return a {@link java.lang.Number} object
+     */
     public Number getXValue(int series, int item) {
-        return new Double(-10.0 + (item * 0.2));
+        return Double.valueOf(-10.0 + (item * 0.2));
     }
 
     /**
-     * Returns the y-value for the specified series and item. Series are numbered 0,
-     * 1, ...
-     * 
+     * Returns the y-value for the specified series and item. Series are numbered 0, 1, ...
+     *
      * @param series The index (zero-based) of the series;
-     * @param item   The index (zero-based) of the required item;
+     * @param item The index (zero-based) of the required item;
      * @return The y-value for the specified series and item.
      */
     public Number getYValue(int series, int item) {
         if (series == 0) {
-            return new Double(Math.cos(-10.0 + (item * 0.2)));
+            return Double.valueOf(Math.cos(-10.0 + (item * 0.2)));
         } else {
-            return new Double(2 * (Math.sin(-10.0 + (item * 0.2))));
+            return Double.valueOf(2 * (Math.sin(-10.0 + (item * 0.2))));
         }
     }
 
     /**
      * Returns the number of series in the data source.
-     * 
+     *
      * @return The number of series in the data source.
      */
     public int getSeriesCount() {
@@ -53,7 +63,7 @@ public class dataHandeling {
 
     /**
      * Returns the name of the series.
-     * 
+     *
      * @param series The index (zero-based) of the series;
      * @return The name of the series.
      */
@@ -69,7 +79,7 @@ public class dataHandeling {
 
     /**
      * Returns the number of items in the specified series.
-     * 
+     *
      * @param series The index (zero-based) of the series;
      * @return The number of items in the specified series.
      */
@@ -77,10 +87,24 @@ public class dataHandeling {
         return 81;
     }
 
+    /**
+     * <p>
+     * getLegendItemCount.
+     * </p>
+     *
+     * @return a int
+     */
     public int getLegendItemCount() {
         return 2;
     }
 
+    /**
+     * <p>
+     * getLegendItemLabels.
+     * </p>
+     *
+     * @return an array of {@link java.lang.String} objects
+     */
     public String[] getLegendItemLabels() {
         String[] str = new String[2];
         str[1] = "";
@@ -88,16 +112,21 @@ public class dataHandeling {
         return str;
     }
 
+    /**
+     * <p>
+     * printToFile.
+     * </p>
+     *
+     * @param points an array of {@link double} objects
+     * @param filename a {@link java.lang.String} object
+     */
     public void printToFile(double[][] points, String filename) {
-
         DecimalFormat nf = new DecimalFormat();
         nf.setMaximumFractionDigits(5);
         nf.applyPattern("#.####E0");
 
-        try {
-            DataOutputStream rt = new DataOutputStream(
-                    new BufferedOutputStream(new FileOutputStream(new File("c:/temp/" + filename))));
-
+        try (DataOutputStream rt = new DataOutputStream(
+                new BufferedOutputStream(new FileOutputStream(new File("c:/temp/" + filename))))) {
             for (int i = 0; i < points.length; i++) {
                 for (int j = 0; j < points[i].length; j++) {
                     rt.writeBytes(nf.format(points[i][j]) + "\t");
@@ -106,12 +135,9 @@ public class dataHandeling {
                     }
                 }
             }
-            rt.close();
         } catch (Exception e) {
             String err = e.toString();
             System.out.println(err);
         }
-
     }
-
 }
