@@ -1,12 +1,19 @@
 package neqsim.fluidMechanics.flowNode.fluidBoundary.heatMassTransferCalc.nonEquilibriumFluidBoundary;
 
-import Jama.*;
+import Jama.Matrix;
 import neqsim.fluidMechanics.flowNode.FlowNodeInterface;
 import neqsim.thermo.system.SystemInterface;
 
+/**
+ * <p>
+ * Abstract NonEquilibriumFluidBoundary class.
+ * </p>
+ *
+ * @author asmund
+ * @version $Id: $Id
+ */
 public abstract class NonEquilibriumFluidBoundary
         extends neqsim.fluidMechanics.flowNode.fluidBoundary.heatMassTransferCalc.FluidBoundary {
-
     private static final long serialVersionUID = 1000;
 
     protected int neq = 0;
@@ -19,51 +26,80 @@ public abstract class NonEquilibriumFluidBoundary
 
     public double[][] molFractionDifference;
 
-    public NonEquilibriumFluidBoundary() {
-    }
+    /**
+     * <p>
+     * Constructor for NonEquilibriumFluidBoundary.
+     * </p>
+     */
+    public NonEquilibriumFluidBoundary() {}
 
+    /**
+     * <p>
+     * Constructor for NonEquilibriumFluidBoundary.
+     * </p>
+     *
+     * @param system a {@link neqsim.thermo.system.SystemInterface} object
+     */
     public NonEquilibriumFluidBoundary(SystemInterface system) {
         super(system);
         neq = 3 * bulkSystem.getPhases()[0].getNumberOfComponents();
         Jac = new Matrix(neq, neq);
         fvec = new Matrix(neq, 1);
-        massTransferCoefficientMatrix[0] = new Matrix(getBulkSystem().getPhases()[0].getNumberOfComponents() - 1,
-                getBulkSystem().getPhases()[0].getNumberOfComponents() - 1);
-        massTransferCoefficientMatrix[1] = new Matrix(getBulkSystem().getPhases()[0].getNumberOfComponents() - 1,
-                getBulkSystem().getPhases()[0].getNumberOfComponents() - 1);
-        totalMassTransferCoefficientMatrix[0] = new Matrix(getBulkSystem().getPhases()[0].getNumberOfComponents() - 1,
-                getBulkSystem().getPhases()[0].getNumberOfComponents() - 1);
-        totalMassTransferCoefficientMatrix[1] = new Matrix(getBulkSystem().getPhases()[0].getNumberOfComponents() - 1,
-                getBulkSystem().getPhases()[0].getNumberOfComponents() - 1);
-        molFractionDifference = new double[2][getBulkSystem().getPhases()[0].getNumberOfComponents() - 1];
+        massTransferCoefficientMatrix[0] =
+                new Matrix(getBulkSystem().getPhases()[0].getNumberOfComponents() - 1,
+                        getBulkSystem().getPhases()[0].getNumberOfComponents() - 1);
+        massTransferCoefficientMatrix[1] =
+                new Matrix(getBulkSystem().getPhases()[0].getNumberOfComponents() - 1,
+                        getBulkSystem().getPhases()[0].getNumberOfComponents() - 1);
+        totalMassTransferCoefficientMatrix[0] =
+                new Matrix(getBulkSystem().getPhases()[0].getNumberOfComponents() - 1,
+                        getBulkSystem().getPhases()[0].getNumberOfComponents() - 1);
+        totalMassTransferCoefficientMatrix[1] =
+                new Matrix(getBulkSystem().getPhases()[0].getNumberOfComponents() - 1,
+                        getBulkSystem().getPhases()[0].getNumberOfComponents() - 1);
+        molFractionDifference =
+                new double[2][getBulkSystem().getPhases()[0].getNumberOfComponents() - 1];
         // interphaseSystem = (SystemInterface) bulkSystem.clone();
         // interphaseOps = new ThermodynamicOperations(interphaseSystem);
         // interphaseOps.TPflash();
         // // interphaseOps.displayResult();
     }
 
+    /**
+     * <p>
+     * Constructor for NonEquilibriumFluidBoundary.
+     * </p>
+     *
+     * @param flowNode a {@link neqsim.fluidMechanics.flowNode.FlowNodeInterface} object
+     */
     public NonEquilibriumFluidBoundary(FlowNodeInterface flowNode) {
         super(flowNode);
         neq = 3 * bulkSystem.getPhases()[0].getNumberOfComponents();
         Jac = new Matrix(neq, neq);
         fvec = new Matrix(neq, 1);
-        massTransferCoefficientMatrix[0] = new Matrix(getBulkSystem().getPhases()[0].getNumberOfComponents() - 1,
-                getBulkSystem().getPhases()[0].getNumberOfComponents() - 1);
-        massTransferCoefficientMatrix[1] = new Matrix(getBulkSystem().getPhases()[0].getNumberOfComponents() - 1,
-                getBulkSystem().getPhases()[0].getNumberOfComponents() - 1);
-        totalMassTransferCoefficientMatrix[0] = new Matrix(getBulkSystem().getPhases()[0].getNumberOfComponents() - 1,
-                getBulkSystem().getPhases()[0].getNumberOfComponents() - 1);
-        totalMassTransferCoefficientMatrix[1] = new Matrix(getBulkSystem().getPhases()[0].getNumberOfComponents() - 1,
-                getBulkSystem().getPhases()[0].getNumberOfComponents() - 1);
+        massTransferCoefficientMatrix[0] =
+                new Matrix(getBulkSystem().getPhases()[0].getNumberOfComponents() - 1,
+                        getBulkSystem().getPhases()[0].getNumberOfComponents() - 1);
+        massTransferCoefficientMatrix[1] =
+                new Matrix(getBulkSystem().getPhases()[0].getNumberOfComponents() - 1,
+                        getBulkSystem().getPhases()[0].getNumberOfComponents() - 1);
+        totalMassTransferCoefficientMatrix[0] =
+                new Matrix(getBulkSystem().getPhases()[0].getNumberOfComponents() - 1,
+                        getBulkSystem().getPhases()[0].getNumberOfComponents() - 1);
+        totalMassTransferCoefficientMatrix[1] =
+                new Matrix(getBulkSystem().getPhases()[0].getNumberOfComponents() - 1,
+                        getBulkSystem().getPhases()[0].getNumberOfComponents() - 1);
         // interphaseSystem = (SystemInterface) bulkSystem.clone();
-        molFractionDifference = new double[2][getBulkSystem().getPhases()[0].getNumberOfComponents() - 1];
+        molFractionDifference =
+                new double[2][getBulkSystem().getPhases()[0].getNumberOfComponents() - 1];
         // interphaseOps = new ThermodynamicOperations(interphaseSystem);
         // interphaseOps.TPflash();
         // // interphaseOps.displayResult();
     }
 
+    /** {@inheritDoc} */
     @Override
-	public Object clone() {
+    public NonEquilibriumFluidBoundary clone() {
         NonEquilibriumFluidBoundary clonedSystem = null;
 
         try {
@@ -75,50 +111,62 @@ public abstract class NonEquilibriumFluidBoundary
         return clonedSystem;
     }
 
+    /**
+     * <p>
+     * setfvecMassTrans.
+     * </p>
+     */
     public void setfvecMassTrans() {
         double sumx = 0, sumy = 0;
         for (int i = 0; i < bulkSystem.getPhases()[0].getNumberOfComponents(); i++) {
-            fvec.set(i, 0,
-                    Math.log((interphaseSystem.getPhases()[0].getComponents()[i].getFugasityCoeffisient()
+            fvec.set(i, 0, Math.log(
+                    (interphaseSystem.getPhases()[0].getComponents()[i].getFugasityCoeffisient()
                             * interphaseSystem.getPhases()[0].getComponents()[i].getx()))
-                            - Math.log((interphaseSystem.getPhases()[1].getComponents()[i].getFugasityCoeffisient()
-                                    * interphaseSystem.getPhases()[1].getComponents()[i].getx())));
+                    - Math.log((interphaseSystem.getPhases()[1].getComponents()[i]
+                            .getFugasityCoeffisient()
+                            * interphaseSystem.getPhases()[1].getComponents()[i].getx())));
             sumx += interphaseSystem.getPhases()[0].getComponents()[i].getx();
             sumy += interphaseSystem.getPhases()[1].getComponents()[i].getx();
-
         }
         fvec.set(bulkSystem.getPhases()[0].getNumberOfComponents() - 1, 0, 1.0 - sumx);
         fvec.set(bulkSystem.getPhases()[0].getNumberOfComponents(), 0, 1.0 - sumy);
 
         for (int i = bulkSystem.getPhases()[0].getNumberOfComponents() + 1; i < (2
                 * bulkSystem.getPhases()[0].getNumberOfComponents()); i++) {
-            fvec.set(i, 0,
-                    (totalMassTransferCoefficientMatrix[1].get(
+            fvec.set(i, 0, (totalMassTransferCoefficientMatrix[1].get(
+                    i - (bulkSystem.getPhases()[0].getNumberOfComponents() + 1),
+                    i - (bulkSystem.getPhases()[0].getNumberOfComponents() + 1))
+                    * (bulkSystem.getPhases()[0].getComponents()[i
+                            - (bulkSystem.getPhases()[0].getNumberOfComponents() + 1)].getx()
+                            - interphaseSystem.getPhases()[0].getComponents()[i
+                                    - (bulkSystem.getPhases()[0].getNumberOfComponents() + 1)]
+                                            .getx())
+                    + (totalMassTransferCoefficientMatrix[0].get(
                             i - (bulkSystem.getPhases()[0].getNumberOfComponents() + 1),
                             i - (bulkSystem.getPhases()[0].getNumberOfComponents() + 1))
-                            * (bulkSystem.getPhases()[0].getComponents()[i
-                                    - (bulkSystem.getPhases()[0].getNumberOfComponents() + 1)].getx()
-                                    - interphaseSystem.getPhases()[0].getComponents()[i
-                                            - (bulkSystem.getPhases()[0].getNumberOfComponents() + 1)].getx())
-                            + (totalMassTransferCoefficientMatrix[0].get(
-                                    i - (bulkSystem.getPhases()[0].getNumberOfComponents() + 1),
-                                    i - (bulkSystem.getPhases()[0].getNumberOfComponents() + 1))
-                                    * (bulkSystem.getPhases()[1].getComponents()[i
-                                            - (bulkSystem.getPhases()[0].getNumberOfComponents() + 1)].getx()
-                                            - interphaseSystem.getPhases()[1].getComponents()[i
-                                                    - (bulkSystem.getPhases()[0].getNumberOfComponents() + 1)]
-                                                            .getx()))));
+                            * (bulkSystem.getPhases()[1].getComponents()[i
+                                    - (bulkSystem.getPhases()[0].getNumberOfComponents() + 1)]
+                                            .getx()
+                                    - interphaseSystem.getPhases()[1].getComponents()[i
+                                            - (bulkSystem.getPhases()[0].getNumberOfComponents()
+                                                    + 1)].getx()))));
         }
     }
 
+    /**
+     * <p>
+     * setfvecMassTrans2.
+     * </p>
+     */
     public void setfvecMassTrans2() {
         double sumx = 0.0, sumy = 0.0;
         for (int i = 0; i < bulkSystem.getPhases()[0].getNumberOfComponents(); i++) {
-            fvec.set(i, 0,
-                    Math.log((interphaseSystem.getPhases()[0].getComponents()[i].getFugasityCoeffisient()
+            fvec.set(i, 0, Math.log(
+                    (interphaseSystem.getPhases()[0].getComponents()[i].getFugasityCoeffisient()
                             * interphaseSystem.getPhases()[0].getComponents()[i].getx()))
-                            - Math.log((interphaseSystem.getPhases()[1].getComponents()[i].getFugasityCoeffisient()
-                                    * interphaseSystem.getPhases()[1].getComponents()[i].getx())));
+                    - Math.log((interphaseSystem.getPhases()[1].getComponents()[i]
+                            .getFugasityCoeffisient()
+                            * interphaseSystem.getPhases()[1].getComponents()[i].getx())));
             sumx += interphaseSystem.getPhases()[1].getComponents()[i].getx();
             sumy += interphaseSystem.getPhases()[0].getComponents()[i].getx();
         }
@@ -162,27 +210,34 @@ public abstract class NonEquilibriumFluidBoundary
         // System.out.println("xn gas flux");
         // x.transpose().times(totalFlux).print(10,10);
 
-        Matrix errX = nFlux.getMatrix(0, bulkSystem.getPhases()[1].getNumberOfComponents() - 2, 0, 0).plus(fluxX)
-                .minus(x.transpose().times(totalFlux));
-        Matrix errY = nFlux.getMatrix(0, bulkSystem.getPhases()[0].getNumberOfComponents() - 2, 0, 0).minus(fluxY)
-                .minus(y.transpose().times(totalFlux));
+        Matrix errX =
+                nFlux.getMatrix(0, bulkSystem.getPhases()[1].getNumberOfComponents() - 2, 0, 0)
+                        .plus(fluxX).minus(x.transpose().times(totalFlux));
+        Matrix errY =
+                nFlux.getMatrix(0, bulkSystem.getPhases()[0].getNumberOfComponents() - 2, 0, 0)
+                        .minus(fluxY).minus(y.transpose().times(totalFlux));
 
         for (int i = bulkSystem.getPhases()[0].getNumberOfComponents()
                 + 2; i < (2 * bulkSystem.getPhases()[0].getNumberOfComponents() + 1); i++) {
-            fvec.set(i, 0, errX.get((i - (bulkSystem.getPhases()[0].getNumberOfComponents() + 2)), 0));
+            fvec.set(i, 0,
+                    errX.get((i - (bulkSystem.getPhases()[0].getNumberOfComponents() + 2)), 0));
             fvec.set((i + (bulkSystem.getPhases()[0].getNumberOfComponents() - 1)), 0,
                     errY.get((i - (bulkSystem.getPhases()[0].getNumberOfComponents() + 2)), 0));
         }
 
         /*
-         * System.out.println("fvec"); fvec.print(30,30); errX.print(10,10);
-         * errY.print(10,10);
+         * System.out.println("fvec"); fvec.print(30,30); errX.print(10,10); errY.print(10,10);
          */
         // fluxX.print(10,10);
         // fluxY.print(10,10);
         // Matrix fluxY = totalMassTransferCoefficientMatrix[1]
     }
 
+    /**
+     * <p>
+     * setJacMassTrans.
+     * </p>
+     */
     public void setJacMassTrans() {
         double dij = 0, tempJ = 0;
         Jac.timesEquals(0.0);
@@ -246,6 +301,11 @@ public abstract class NonEquilibriumFluidBoundary
         }
     }
 
+    /**
+     * <p>
+     * setJacMassTrans2.
+     * </p>
+     */
     public void setJacMassTrans2() {
         double dij = 0, tempJ = 0;
         Jac.timesEquals(0.0);
@@ -323,8 +383,9 @@ public abstract class NonEquilibriumFluidBoundary
                                     / bulkSystem.getPhases()[0].getMolarMass());// tempJ);
                 }
                 Jac.set(i + 1 + bulkSystem.getPhases()[0].getNumberOfComponents(),
-                        j + bulkSystem.getPhases()[0].getNumberOfComponents(), dij - bulkSystem.getPhases()[0]
-                                .getComponents()[i - bulkSystem.getPhases()[0].getNumberOfComponents()].getx());
+                        j + bulkSystem.getPhases()[0].getNumberOfComponents(),
+                        dij - bulkSystem.getPhases()[0].getComponents()[i
+                                - bulkSystem.getPhases()[0].getNumberOfComponents()].getx());
             }
         }
         // System.out.println("jac");
@@ -333,6 +394,11 @@ public abstract class NonEquilibriumFluidBoundary
         // totalMassTransferCoefficientMatrix[1].print(20,20);
     }
 
+    /**
+     * <p>
+     * Setter for the field <code>uMassTrans</code>.
+     * </p>
+     */
     public void setuMassTrans() {
         for (int i = 0; i < bulkSystem.getPhases()[0].getNumberOfComponents(); i++) {
             uMassTrans.set(i, 0, interphaseSystem.getPhases()[0].getComponents()[i].getx());
@@ -342,10 +408,16 @@ public abstract class NonEquilibriumFluidBoundary
 
         for (int i = 2 * bulkSystem.getPhases()[0].getNumberOfComponents(); i < 3
                 * bulkSystem.getPhases()[0].getNumberOfComponents(); i++) {
-            uMassTrans.set(i, 0, nFlux.get(i - 2 * bulkSystem.getPhases()[0].getNumberOfComponents(), 0));
+            uMassTrans.set(i, 0,
+                    nFlux.get(i - 2 * bulkSystem.getPhases()[0].getNumberOfComponents(), 0));
         }
     }
 
+    /**
+     * <p>
+     * updateMassTrans.
+     * </p>
+     */
     public void updateMassTrans() {
         for (int i = 0; i < bulkSystem.getPhases()[0].getNumberOfComponents(); i++) {
             interphaseSystem.getPhases()[0].getComponents()[i].setx(uMassTrans.get(i, 0));
@@ -355,10 +427,16 @@ public abstract class NonEquilibriumFluidBoundary
 
         for (int i = 2 * bulkSystem.getPhases()[0].getNumberOfComponents(); i < 3
                 * bulkSystem.getPhases()[0].getNumberOfComponents(); i++) {
-            nFlux.set(i - 2 * bulkSystem.getPhases()[0].getNumberOfComponents(), 0, uMassTrans.get(i, 0));
+            nFlux.set(i - 2 * bulkSystem.getPhases()[0].getNumberOfComponents(), 0,
+                    uMassTrans.get(i, 0));
         }
     }
 
+    /**
+     * <p>
+     * calcMolFractionDifference.
+     * </p>
+     */
     public void calcMolFractionDifference() {
         for (int i = 0; i < getBulkSystem().getPhases()[0].getNumberOfComponents() - 1; i++) {
             molFractionDifference[0][i] = bulkSystem.getPhases()[0].getComponents()[i].getx()
@@ -368,6 +446,13 @@ public abstract class NonEquilibriumFluidBoundary
         }
     }
 
+    /**
+     * <p>
+     * calcHeatTransferCoeffisients.
+     * </p>
+     *
+     * @param phase a int
+     */
     public void calcHeatTransferCoeffisients(int phase) {
         prandtlNumber[phase] = getBulkSystem().getPhases()[phase].getCp()
                 / getBulkSystem().getPhases()[phase].getNumberOfMolesInPhase()
@@ -380,6 +465,13 @@ public abstract class NonEquilibriumFluidBoundary
                 .calcInterphaseHeatTransferCoefficient(phase, prandtlNumber[phase], flowNode);
     }
 
+    /**
+     * <p>
+     * calcHeatTransferCorrection.
+     * </p>
+     *
+     * @param phase a int
+     */
     public void calcHeatTransferCorrection(int phase) {
         double temp = 1.0e-20;
         for (int i = 0; i < bulkSystem.getPhases()[0].getNumberOfComponents(); i++) {
@@ -387,7 +479,8 @@ public abstract class NonEquilibriumFluidBoundary
                 temp += 0.0;
             } else {
                 temp += nFlux.get(i, 0) * getBulkSystem().getPhases()[phase].getCp()
-                        / getBulkSystem().getPhases()[phase].getNumberOfMolesInPhase() / heatTransferCoefficient[phase];// bulkSystem.getPhases()[0].getComponents()[i].getNumberOfMolesInPhase()*
+                        / getBulkSystem().getPhases()[phase].getNumberOfMolesInPhase()
+                        / heatTransferCoefficient[phase];// bulkSystem.getPhases()[0].getComponents()[i].getNumberOfMolesInPhase()*
             }
         }
         // System.out.println("temp eat " + temp);
@@ -400,29 +493,32 @@ public abstract class NonEquilibriumFluidBoundary
         // System.out.println("heat corr. " + heatTransferCorrection[phase]);
     }
 
+    /** {@inheritDoc} */
     @Override
-	public void initMassTransferCalc() {
+    public void initMassTransferCalc() {
         super.initMassTransferCalc();
     }
 
+    /** {@inheritDoc} */
     @Override
-	public void initHeatTransferCalc() {
+    public void initHeatTransferCalc() {
         super.initHeatTransferCalc();
     }
 
+    /** {@inheritDoc} */
     @Override
-	public void init() {
+    public void init() {
         calcMolFractionDifference();
         super.init();
     }
 
+    /** {@inheritDoc} */
     @Override
-	public void heatTransSolve() {
+    public void heatTransSolve() {
         double f = 0;
         double df = 0;
         double dhtot = 0.0;
         int iter = 0;
-        double oldInterTemp = interphaseSystem.getTemperature();
         do {
             iter++;
             dhtot = 0.0;
@@ -432,14 +528,17 @@ public abstract class NonEquilibriumFluidBoundary
                         / bulkSystem.getPhases()[0].getComponents()[i].getNumberOfMolesInPhase()
                         - bulkSystem.getPhases()[1].getComponents()[i]
                                 .getEnthalpy(bulkSystem.getPhases()[1].getTemperature())
-                                / bulkSystem.getPhases()[1].getComponents()[i].getNumberOfMolesInPhase());
+                                / bulkSystem.getPhases()[1].getComponents()[i]
+                                        .getNumberOfMolesInPhase());
             }
             // System.out.println("dhtot " + dhtot + " heat coef " +
             // heatTransferCoefficient[0]);
             f = heatTransferCoefficient[0] * heatTransferCorrection[0]
-                    * (bulkSystem.getPhases()[0].getTemperature() - interphaseSystem.getTemperature())
+                    * (bulkSystem.getPhases()[0].getTemperature()
+                            - interphaseSystem.getTemperature())
                     + heatTransferCoefficient[1] * heatTransferCorrection[1]
-                            * (bulkSystem.getPhases()[1].getTemperature() - interphaseSystem.getTemperature())
+                            * (bulkSystem.getPhases()[1].getTemperature()
+                                    - interphaseSystem.getTemperature())
                     + dhtot;
 
             df = -heatTransferCoefficient[0] * heatTransferCorrection[0]
@@ -459,14 +558,14 @@ public abstract class NonEquilibriumFluidBoundary
         // " + getInterphaseHeatFlux(1));
     }
 
+    /** {@inheritDoc} */
     @Override
-	public void massTransSolve() {
+    public void massTransSolve() {
         int iter = 1;
         double err = 1.0e10, oldErr = 0.0;
         double factor = 10.0;
         // if(bulkSystem.isChemicalSystem()) factor=100.0;
         setuMassTrans();
-        Matrix tempMatr = new Matrix(1, 1);
         do {
             oldErr = err;
             iter++;
@@ -474,9 +573,8 @@ public abstract class NonEquilibriumFluidBoundary
             setfvecMassTrans2();
             setJacMassTrans2();
             dx = Jac.solve(fvec);
-            if (!new Double(dx.norm2()).isNaN()) {
+            if (!Double.valueOf(dx.norm2()).isNaN()) {
                 uMassTrans.minusEquals(dx.times(iter / (iter + factor)));
-                tempMatr = dx.arrayRightDivide(uMassTrans);
                 err = Math.abs(dx.norm2() / uMassTrans.norm2());
                 updateMassTrans();
                 calcFluxes();
@@ -489,8 +587,9 @@ public abstract class NonEquilibriumFluidBoundary
         calcFluxes();
     }
 
+    /** {@inheritDoc} */
     @Override
-	public double[] calcFluxes() {
+    public double[] calcFluxes() {
         double sum = 0.0;
         // System.out.println("starter...");
         for (int i = 0; i < bulkSystem.getPhases()[0].getNumberOfComponents(); i++) {
@@ -502,8 +601,9 @@ public abstract class NonEquilibriumFluidBoundary
         return nFlux.transpose().getArray()[0];
     }
 
+    /** {@inheritDoc} */
     @Override
-	public void solve() {
+    public void solve() {
         // interphaseSystem = (SystemInterface) bulkSystem.clone();
         initInterphaseSystem();
         init();
@@ -532,7 +632,8 @@ public abstract class NonEquilibriumFluidBoundary
                 this.heatTransSolve();
                 heatFlux = this.getInterphaseHeatFlux(0);
             }
-        } while (Math.abs((oldHeatFlux - heatFlux) / heatFlux) > 1e-6 && heatTransferCalc && iterInner < 50);
+        } while (Math.abs((oldHeatFlux - heatFlux) / heatFlux) > 1e-6 && heatTransferCalc
+                && iterInner < 50);
         init();
         // System.out.println("iterInner " +iterInner + " temp gas " +
         // interphaseSystem.getTemperature(0)+ " temp liq " +
