@@ -1,36 +1,28 @@
-/*
- * Copyright 2018 ESOL.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *      http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
 package neqsim.util.database;
 
-/*
- * testPointbase.java
- *
- * Created on 1. november 2001, 08:56
- */
-import java.sql.*;
-import org.apache.logging.log4j.*;
+import java.sql.Connection;
+import java.sql.DriverManager;
+import java.sql.ResultSet;
+import java.sql.SQLException;
+import java.sql.Statement;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 
 /**
+ * <p>
+ * NeqSimTechnicalDesignDatabase class.
+ * </p>
  *
  * @author Even Solbraa
  * @version Dec 2018
  */
-public class NeqSimTechnicalDesignDatabase implements neqsim.util.util.FileSystemSettings, java.io.Serializable {
-
+public class NeqSimTechnicalDesignDatabase
+        implements neqsim.util.util.FileSystemSettings, java.io.Serializable {
     /**
+     * <p>
+     * createTemporaryTables.
+     * </p>
+     *
      * @return the createTemporaryTables
      */
     public boolean createTemporaryTables() {
@@ -38,6 +30,10 @@ public class NeqSimTechnicalDesignDatabase implements neqsim.util.util.FileSyste
     }
 
     /**
+     * <p>
+     * Setter for the field <code>createTemporaryTables</code>.
+     * </p>
+     *
      * @param createTemporaryTables the createTemporaryTables to set
      */
     public void setCreateTemporaryTables(boolean createTemporaryTables) {
@@ -45,22 +41,33 @@ public class NeqSimTechnicalDesignDatabase implements neqsim.util.util.FileSyste
     }
 
     private static final long serialVersionUID = 1000;
+    /** Constant <code>dataBasePath=""</code> */
     public static String dataBasePath = "";
+    /** Constant <code>username=""</code> */
+    /** Constant <code>password=""</code> */
+    /** Constant <code>password=""</code> */
+    /** Constant <code>password=""</code> */
+    /** Constant <code>password=""</code> */
+    /** Constant <code>password=""</code> */
+    /** Constant <code>password=""</code> */
     public static String username = "", password = "";
     static Logger logger = LogManager.getLogger(NeqSimTechnicalDesignDatabase.class);
     private static boolean createTemporaryTables = false;
 
     private static String dataBaseType = "MSAccessUCanAccess";
-    public static String connectionString = "jdbc:ucanaccess://C:/Users/esol/OneDrive - Equinor/programming/neqsimdatabase/MSAccess/NeqSimTechnicalDesignData.accdb;memory=true";
+    /** Constant <code>connectionString="jdbc:ucanaccess://C:/Users/esol/OneDriv"{trunked}</code> */
+    public static String connectionString =
+            "jdbc:ucanaccess://C:/Users/esol/OneDrive - Equinor/programming/neqsimdatabase/MSAccess/NeqSimTechnicalDesignData.accdb;memory=true";
 
     private Statement statement = null;
     protected Connection databaseConnection = null;
 
     /**
-     * Creates new testPointbase
+     * <p>
+     * Constructor for NeqSimTechnicalDesignDatabase.
+     * </p>
      */
     public NeqSimTechnicalDesignDatabase() {
-
         setDataBaseType(dataBaseType);
 
         try {
@@ -69,12 +76,17 @@ public class NeqSimTechnicalDesignDatabase implements neqsim.util.util.FileSyste
         } catch (Exception ex) {
             logger.error("SQLException " + ex.getMessage());
             throw new RuntimeException(ex);
-
         }
     }
 
     /**
-     * Creates new NeqSimDataBase
+     * <p>
+     * openConnection.
+     * </p>
+     *
+     * @return a Connection object
+     * @throws java.sql.SQLException if any.
+     * @throws java.lang.ClassNotFoundException if any.
      */
     public Connection openConnection() throws SQLException, ClassNotFoundException {
         javax.naming.InitialContext ctx = null;
@@ -110,10 +122,25 @@ public class NeqSimTechnicalDesignDatabase implements neqsim.util.util.FileSyste
         }
     }
 
+    /**
+     * <p>
+     * getConnection.
+     * </p>
+     *
+     * @return a Connection object
+     */
     public Connection getConnection() {
         return databaseConnection;
     }
 
+    /**
+     * <p>
+     * getResultSet.
+     * </p>
+     *
+     * @param sqlString a {@link java.lang.String} object
+     * @return a ResultSet object
+     */
     public ResultSet getResultSet(String sqlString) {
         try {
             ResultSet result = getStatement().executeQuery(sqlString);
@@ -124,6 +151,13 @@ public class NeqSimTechnicalDesignDatabase implements neqsim.util.util.FileSyste
         }
     }
 
+    /**
+     * <p>
+     * execute.
+     * </p>
+     *
+     * @param sqlString a {@link java.lang.String} object
+     */
     public void execute(String sqlString) {
         try {
             if (databaseConnection == null) {
@@ -138,14 +172,36 @@ public class NeqSimTechnicalDesignDatabase implements neqsim.util.util.FileSyste
         }
     }
 
+    /**
+     * <p>
+     * Getter for the field <code>dataBaseType</code>.
+     * </p>
+     *
+     * @return a {@link java.lang.String} object
+     */
     public static String getDataBaseType() {
         return dataBaseType;
     }
 
+    /**
+     * <p>
+     * Setter for the field <code>dataBaseType</code>.
+     * </p>
+     *
+     * @param aDataBaseType a {@link java.lang.String} object
+     */
     public static void setDataBaseType(String aDataBaseType) {
         setDataBaseType(aDataBaseType, null);
     }
 
+    /**
+     * <p>
+     * Setter for the field <code>dataBaseType</code>.
+     * </p>
+     *
+     * @param aDataBaseType a {@link java.lang.String} object
+     * @param connectionString a {@link java.lang.String} object
+     */
     public static void setDataBaseType(String aDataBaseType, String connectionString) {
         dataBaseType = aDataBaseType;
 
@@ -155,7 +211,8 @@ public class NeqSimTechnicalDesignDatabase implements neqsim.util.util.FileSyste
 
         try {
             if (dataBaseType.equals("MSAccess")) {
-                Class.forName("sun.jdbc.odbc.JdbcOdbcDriver").newInstance();
+                Class.forName("sun.jdbc.odbc.JdbcOdbcDriver").getDeclaredConstructor()
+                        .newInstance();
             } else if (dataBaseType.equals("H2")) {
                 Class.forName("org.h2.Driver");
             } else if (dataBaseType.equals("H2RT")) {
@@ -163,15 +220,18 @@ public class NeqSimTechnicalDesignDatabase implements neqsim.util.util.FileSyste
             } else if (dataBaseType.equals("MSAccessUCanAccess")) {
                 Class.forName("net.ucanaccess.jdbc.UcanaccessDriver");
             } else if (dataBaseType.equals("mySQL")) {
-                Class.forName("com.mysql.cj.jdbc.Driver").newInstance();
+                Class.forName("com.mysql.cj.jdbc.Driver").getDeclaredConstructor().newInstance();
             } else if (dataBaseType.equals("mySQLNTNU")) {
-                Class.forName("com.mysql.cj.jdbc.Driver").newInstance();
+                Class.forName("com.mysql.cj.jdbc.Driver").getDeclaredConstructor().newInstance();
             } else if (dataBaseType.equals("Derby")) {
-                Class.forName("org.apache.derby.jdbc.EmbeddedDriver").newInstance();
+                Class.forName("org.apache.derby.jdbc.EmbeddedDriver").getDeclaredConstructor()
+                        .newInstance();
             } else if (dataBaseType.equals("oracle")) {
-                Class.forName("oracle.jdbc.driver.OracleDriver").newInstance();
+                Class.forName("oracle.jdbc.driver.OracleDriver").getDeclaredConstructor()
+                        .newInstance();
             } else if (dataBaseType.equals("oracleST")) {
-                Class.forName("oracle.jdbc.driver.OracleDriver").newInstance();
+                Class.forName("oracle.jdbc.driver.OracleDriver").getDeclaredConstructor()
+                        .newInstance();
             } else {
                 Class.forName("sun.jdbc.odbc.JdbcOdbcDriver");
             }
@@ -181,17 +241,33 @@ public class NeqSimTechnicalDesignDatabase implements neqsim.util.util.FileSyste
         }
     }
 
+    /**
+     * <p>
+     * Getter for the field <code>statement</code>.
+     * </p>
+     *
+     * @return a Statement object
+     */
     public Statement getStatement() {
         return statement;
-
-    }
-
-    public void setStatement(Statement statement) {
-        this.statement = statement;
-
     }
 
     /**
+     * <p>
+     * Setter for the field <code>statement</code>.
+     * </p>
+     *
+     * @param statement a Statement object
+     */
+    public void setStatement(Statement statement) {
+        this.statement = statement;
+    }
+
+    /**
+     * <p>
+     * Setter for the field <code>username</code>.
+     * </p>
+     *
      * @param aUsername the username to set
      */
     public static void setUsername(String aUsername) {
@@ -199,6 +275,10 @@ public class NeqSimTechnicalDesignDatabase implements neqsim.util.util.FileSyste
     }
 
     /**
+     * <p>
+     * Setter for the field <code>password</code>.
+     * </p>
+     *
      * @param aPassword the password to set
      */
     public static void setPassword(String aPassword) {
@@ -206,6 +286,10 @@ public class NeqSimTechnicalDesignDatabase implements neqsim.util.util.FileSyste
     }
 
     /**
+     * <p>
+     * Getter for the field <code>connectionString</code>.
+     * </p>
+     *
      * @return the connectionString
      */
     public static String getConnectionString() {
@@ -213,14 +297,13 @@ public class NeqSimTechnicalDesignDatabase implements neqsim.util.util.FileSyste
     }
 
     /**
+     * <p>
+     * Setter for the field <code>connectionString</code>.
+     * </p>
+     *
      * @param aConnectionString the connectionString to set
      */
     public static void setConnectionString(String aConnectionString) {
         connectionString = aConnectionString;
     }
-
-    public static void main(String[] args) {
-
-    }
-
 }
